fix(Quick Reblog): make bundle button focus outline fully visible

--- a/src/features/quick_reblog/index.css
+++ b/src/features/quick_reblog/index.css
@@ -128,6 +128,10 @@
   color: rgb(var(--black));
 }
 
+#quick-reblog .quick-tags button:focus-visible {
+  outline-offset: -2px;
+}
+
 #quick-reblog .quick-tags button::after {
   content: "\2713";
   visibility: hidden;
